--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: huxpro@gmail.com
 description: ""
 keyword: ""
 url: "http://testName10.github.io"              # your host, for absolute URL
-baseurl: "testName10.github.io"         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/testName10.github.io"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
